=== What's New in 2.6 Since 2.5

This section covers the changes made from version 2.5 to version 2.6.
For changes in earlier version, see <<history>>.

[[x26-kafka-client]]
==== Kafka Client Version

This version requires the 2.6.0 `kafka-clients`.

==== Listener Container Changes

The default `EOSMode` is now `BETA`.
See <<exactly-once>> for more information.